Finished through #6. Jump to #8 to save time. The good stuff starts at #9

--- a/freecodecamp/vertworld/index.html
+++ b/freecodecamp/vertworld/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>World Editor</title>
     <link rel="stylesheet" href="styles.css"/>
@@ -21,6 +21,8 @@
 <script src="js/primitives/segment.js"></script>
 <script src="js/primitives/polygon.js"></script>
 <script src="js/primitives/envelope.js"></script>
+<script src="js/items/buildings.js"></script>
+<script src="js/items/tree.js"></script>
 <script>
     const myCanvas = document.getElementById('myCanvas')
     myCanvas.width = 600;
@@ -43,11 +45,12 @@
 
     function animate() {
         viewport.reset();
-        if (graph.hash() != oldGraphHash) {
+        if (graph.hash() !== oldGraphHash) {
             world.generate();
             oldGraphHash = graph.hash();
         }
-        world.draw(ctx);
+        const viewPoint = scale(viewport.getOffset(), -1);
+        world.draw(ctx, viewPoint);
         ctx.globalAlpha = 0.3;
         graphEditor.display();
         requestAnimationFrame(animate);
