--- a/freecodecamp/vertworld/index.html
+++ b/freecodecamp/vertworld/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>World Editor</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
@@ -91,7 +96,7 @@
 
     function animate() {
         viewport.reset();
-        if (graph.hash() != oldGraphHash) {
+        if (graph.hash() !== oldGraphHash) {
             world.generate();
             oldGraphHash = graph.hash();
         }
