--- a/freecodecamp/vertworld/index.html
+++ b/freecodecamp/vertworld/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <!doctype html>
 <html lang="en">
 <head>
@@ -63,6 +62,7 @@
 <script src="js/primitives/polygon.js"></script>
 <script src="js/primitives/envelope.js"></script>
 <script>
+    const myCanvas = document.getElementById('myCanvas');
     myCanvas.width = 600;
     myCanvas.height = 600;
 
